tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/gateway/cipher_suite/to_statefulset.echo/_test_context/Gateway-VirtualService-Secret.1440012037.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: echo-2-98059
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - hosts:
    - statefulset.echo-2-98059.svc.cluster.local
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      cipherSuites:
      - AES128-GCM-SHA256
      - AES128-SHA
      - AES256-GCM-SHA384
      - AES256-SHA
      - DES-CBC3-SHA
      - ECDHE-ECDSA-AES128-GCM-SHA256
      - ECDHE-ECDSA-AES128-SHA
      - ECDHE-ECDSA-AES256-GCM-SHA384
      - ECDHE-ECDSA-AES256-SHA
      - ECDHE-ECDSA-CHACHA20-POLY1305
      - ECDHE-RSA-AES128-GCM-SHA256
      - ECDHE-RSA-AES128-SHA
      - ECDHE-RSA-AES256-GCM-SHA384
      - ECDHE-RSA-AES256-SHA
      - ECDHE-RSA-CHACHA20-POLY1305
      - fake
      credentialName: cred
      mode: SIMPLE
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: statefulset.echo-2-98059.svc.cluster.local
  namespace: echo-2-98059
spec:
  gateways:
  - gateway
  hosts:
  - statefulset.echo-2-98059.svc.cluster.local
  http:
  - route:
    - destination:
        host: statefulset.echo-2-98059.svc.cluster.local
        port:
          number: 18080
---
apiVersion: v1
data:
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZvekNDQTR1Z0F3SUJBZ0lVSE1tR0FzK0hyZkJDUHVMV3hjQkdQRWh0blU0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd1ZERUxNQWtHQTFVRUJoTUNWVk14RHpBTkJnTlZCQWdNQmtSbGJtbGhiREVPTUF3R0ExVUVCd3dGUlhSbwpaWEl4RERBS0JnTlZCQW9NQTBScGN6RVdNQlFHQTFVRUF3d05LaTVsZUdGdGNHeGxMbU52YlRBZUZ3MHlNREE0Ck1USXlNREV5TXpSYUZ3MHpNREE0TVRBeU1ERXlNelJhTUZReEN6QUpCZ05WQkFZVEFsVlRNUTh3RFFZRFZRUUkKREFaRVpXNXBZV3d4RGpBTUJnTlZCQWNNQlVWMGFHVnlNUXd3Q2dZRFZRUUtEQU5FYVhNeEZqQVVCZ05WQkFNTQpEU291WlhoaGJYQnNaUz [...]
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVPakNDQWlLZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREJVTVFzd0NRWURWUVFHRXdKVlV6RVAKTUEwR0ExVUVDQXdHUkdWdWFXRnNNUTR3REFZRFZRUUhEQVZGZEdobGNqRU1NQW9HQTFVRUNnd0RSR2x6TVJZdwpGQVlEVlFRRERBMHFMbVY0WVcxd2JHVXVZMjl0TUI0WERUSXdNRGd4TWpJd01USXpORm9YRFRNd01EZ3hNREl3Ck1USXpORm93R0RFV01CUUdBMVVFQXd3TktpNWxlR0Z0Y0d4bExtTnZiVENDQVNJd0RRWUpLb1pJaHZjTkFRRUIKQlFBRGdnRVBBRENDQVFvQ2dnRUJBS2l1TEpkTy9UcTFvcS9UVEwxdUkxdlpBc1VZaDhqakl2VmxjQlhHUHpYSgpiVlRsQno5MzdiWk9PT [...]
  tls.key: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFb3dJQkFBS0NBUUVBcUs0c2wwNzlPcldpcjlOTXZXNGpXOWtDeFJpSHlPTWk5V1Z3RmNZL05jbHRWT1VIClAzZnR0azQ0NDY1ZHd1dk9VenFYUjMzc2R1R1NycnRYdk9KSUlwOTh5M2RtbTJKTGtSSEw1cjNpT3BPUUtKcWMKZWxCSjIramdBVVprY3ZFT1F2WkNRUys0NjhPWlI4YVorNzF5cWdkZ1Z3djB3a3FVYTl4Ym9CNzlCSnNFVXZGMQpGOVVaK3djTHpEaXVHWlRZdHRvQUZzSDRkVW56TThveU1TaCtobDV0TlJXbHExQ1QvL1plY3p0VlhpdGl0dXNqCktwc0RaVlpBaFRRMTdpUkNFb1p6cGFIajJhTlhtQUF1T2RaSUZKUDRmaDRGeWdxRVVmS29rWFJiS0ZjaVN5MnYKSjNTYmdLajlVU [...]
kind: Secret
metadata:
  creationTimestamp: null
  name: cred
  namespace: 'aks-istio-ingress'
